# cascade

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  example_call.py  pyproject.toml  rustfmt.toml
.github/workflows/: CI.yml  build_and_publish.yml  check_and_lint.yml  codecov.yml  coverage.yml  remove-old-artifacrs.yml  remove-old-artifacts.yml  short_CI.yml
cascade/: __init__.py  __init__.pyi  basic.py  graph.py  paths.py  unstable.py  validators.py
cascade-bin/: Cargo.toml
cascade-bin/src/: main.rs
cascade-core/: Cargo.toml
cascade-core/src/: algo.rs  connectors.rs  example.rs  graph.rs  itinerary.rs  lib.rs  loaders.rs  prelude.rs  shapes.rs  streets.rs  trip_geometry.rs  utils.rs
cascade-core/src/algo/: dijkstra.rs  dijkstra_itinerary.rs  isochrone.rs  min_scored.rs  mod.rs  path_wrappers.rs
cascade-core/src/algo/itinerary/: dijkstra_itinerary.rs  mod.rs  segment.rs
docs/source/: cascade.md  cascade.rst  conf.py  index.md  index.rst
scripts/: example.ipynb  example_2.ipynb  example_call.py
src/: algo.rs  graph.rs  isochrone.rs  itinerary.rs  lib.rs
src/cascade-core/src/: loaders.rs
src/router_bin/: Cargo.toml
src/router_bin/src/: main.rs
src/router_core/: Cargo.toml
src/router_core/src/: algo.rs  graph.rs  lib.rs  prelude.rs  streets.rs
tests/: core_integration_test.rs
