[workspace]
resolver = "2"
members = ["cascade-core"]

[package]
name = "cascade"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "cascade"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "hashbrown"] }
hashbrown = "0.15.2"
geo = "0.29"
geojson = "0.24.2"
rayon = "1.10"
cascade_core = { path = "cascade-core", features = ["isochrone"] }

[profile.test]
opt-level = 1
debug = false
