[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "cascade"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
license = { text = "MIT OR Apache-2.0" }
dependencies = ["polars >= 1.9.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "cascade._cascade_core"

[tool.uv]
dev-dependencies = [
    "maturin",
    "geopandas",
    "h3pandas",
    "folium",
    "mapclassify",
    "osmnx",
]
