[package]
name = "cascade_core"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.45.1", default-features = false, features = [
    "cross_join",
    "csv",
] }
petgraph = "0.6.5"
rustworkx-core = "0.15.1"
geo = "0.29"
rstar = "0.12.2"
thiserror = "2.0.0"
osm4routing = "0.7.0"
ahash = "0.8.11"
itertools = "0.13.0"

[dev-dependencies]
approx = "0.5.1"
