[package]
name = "cascade_core"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.45.1", default-features = false, features = [
    "cross_join",
    "csv",
] }
petgraph = "0.6.5"
rustworkx-core = "0.15.1"
geo = { version = "0.29", features = ["use-serde"] }
geojson = "0.24.0"
rstar = "0.12.2"
thiserror = "2.0.0"
osm4routing = "0.7.0"
ahash = "0.8.11"
itertools = "0.14.0"
serde_json = "1.0"

[dev-dependencies]
approx = "0.5.1"
