[package]
name = "cascade_core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
polars = { version = "0.45.1", default-features = false, features = [
    "cross_join",
    "csv",
] }
petgraph = "0.6.5"
rustworkx-core = "0.15.1"
geo = { version = "0.29", features = ["use-serde"] }
geos = { version = "9.1.1", features = ["geo", "json", "static"] }
geojson = "0.24.0"
rstar = "0.12.2"
rayon = "1.10"
thiserror = "2.0.0"
osm4routing = "0.7.0"
hashbrown = "0.15.2"
itertools = "0.14.0"
serde_json = "1.0"
serde = "1"

[dev-dependencies]
approx = "0.5.1"
